--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Path-Extended-Tiny
 
+0.03 2014/09/30
+  - fixed a case when an absolute path is passed to file/subdir
+    (Unlike Path::Class/Path::Tiny, Path::Extended doesn't simply
+    append the path to the original and replaces the original with
+    the new absolute path.)
+
 0.02 2014/09/05
   - subsumes requires Path::Tiny 0.048
 
