--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Path-Extended-Tiny
 
+0.07 2015/03/11
+  - requires Exporter 5.57
+  - let recurse() accept a single code reference as its argument
+
 0.06 2014/12/23
   - fixed README
 
